# vstr

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: vec.c  vec.h  vstring.c  vstring.h
tests/: CMakeLists.txt  string_test.c  vec_test.c
